backendFrontend Docker
Extended CORS permettait les origines, méthodes et en-têtes dans SecurityConfig, ajoutait un bean CorsFilter et autorisait les requêtes OPTIONS pour tous les points de terminaison. Mise à jour docker-compose pour mapper le service frontend au port 3002 au lieu du 3000.